<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back</string>
    <string name="you_must_have_a_tmdb_account_in_order_to_log_in">You must have a TMDB account in order to log in</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="skip">Skip</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
</resources>