<com.ru.movieshows.core.presentation.views.ResultView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.ru.movieshows.signin.presentation.signin.SignInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signInHeaderTextView"
                style="?attr/textAppearanceHeadline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@string/sign_in" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/signInCardView"
                style="?attr/cardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_30">

                <LinearLayout
                    android:id="@+id/inputFormsLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dp_16"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        style="?attr/textAppearanceHeadline5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_back"
                        android:textColor="?attr/primaryTextColor"
                        android:textStyle="bold" />

                    <TextView
                        style="?attr/textAppearanceBody3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_4"
                        android:text="@string/you_must_have_a_tmdb_account_in_order_to_log_in"
                        android:textColor="?attr/primaryTextColor" />

                    <TextView
                        style="?attr/textAppearanceBody3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        android:text="@string/username"
                        android:textColor="?attr/primaryTextColor" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/usernameTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_4"
                        android:hint="@string/enter_username"
                        app:errorEnabled="true"
                        app:helperTextEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/usernameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:lines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        style="?attr/textAppearanceBody3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="?attr/primaryTextColor" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_4"
                        android:hint="@string/enter_the_password"
                        app:errorEnabled="true"
                        app:helperTextEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:lines="1"
                            app:errorEnabled="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signInButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_55"
                        android:layout_marginTop="@dimen/dp_16"
                        android:text="@string/sign_in" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/skipSignInButton"
                        style="?attr/textAppearanceButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_55"
                        android:layout_marginTop="@dimen/dp_8"
                        android:text="@string/skip"
                        android:textAlignment="center" />

                    <ProgressBar
                        android:id="@+id/signInProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dp_8"
                        android:visibility="gone" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</com.ru.movieshows.core.presentation.views.ResultView>
